changed documentation
